fix appheader spacing and searchbar color

--- a/src/components/AppHeader.css
+++ b/src/components/AppHeader.css
@@ -13,4 +13,5 @@
 .line {
     border: 1px solid #fff;
     width: 100%;
+    margin-top: 15px;
 }
